Completely fetching and displaying emails to customers by customerID.

--- a/web/src/main/webapp/WEB-INF/templates/customerDetail.html
+++ b/web/src/main/webapp/WEB-INF/templates/customerDetail.html
@@ -236,15 +236,16 @@
 		                                <th>Được gửi bởi</th>
 		                            </tr>
 		                        </thead>
-		                        <tbody>
-		                            <tr class="bg-blue bg-lighten-5">
+		                        <tbody id="email-list">
+		                        
+		                            <!-- <tr class="bg-blue bg-lighten-5">
 		                                <td class="th1">
 		                                	<input type="checkbox" class="email-to-customer-checkbox" />
 		                               	</td>
 																
-		                                <!-- <td class="th1">
+		                                <td class="th1">
 		                                	<input type="checkbox" name="customer" th:value="${customer.id}" class="customer-checkbox" />
-		                                </td> -->
+		                                </td>
 		                                <td>Báo giá sản phẩm</td>
 		                                <td>05/02/2025 2:20 CH</td>
 		                                <td>example@gmail.com</td>
@@ -312,7 +313,7 @@
 		                                <td>Báo giá sản phẩm</td>
 		                                <td>05/02/2025 2:20 CH</td>
 		                                <td>example@gmail.com</td>
-		                            </tr>
+		                            </tr> -->
 		                        </tbody>
 		                    </table>
 		                </div>
