--- a/web/src/main/webapp/WEB-INF/templates/intro.html
+++ b/web/src/main/webapp/WEB-INF/templates/intro.html
@@ -131,7 +131,11 @@
 	<button id="backToTop" class="btn btn-primary rounded-circle">
   		<i class="fas fa-arrow-up"></i>
 	</button>
-	
+
+	<!-- CHAT ASSISTANT -->
+	<th:block th:include="fragments/chat/frg_chatAssistant"></th:block>
+
+
 	<!-- Footer Section -->
     <th:block th:include="fragments/home/footerForIntro"></th:block>
 </body>
