--- a/web/src/main/webapp/resources/css/buttonBackToTop.css
+++ b/web/src/main/webapp/resources/css/buttonBackToTop.css
@@ -5,18 +5,18 @@
   right: 30px;
   bottom: 100px;
   display: none; /* Ban đầu ẩn */
-  background-color: #333 !important;
+  background-color: rgb(219, 172, 11) !important;
   color: white;
-  
   font-size: 16px;
   justify-content: center;
   align-items: center;
   border: none;
   border-radius: 5%;
-  padding: 12px 12px;
+  padding: 20px 23px;
   cursor: pointer;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   transition: opacity 0.3s ease, transform 0.3s ease;
+  z-index: 10;
 }
 
 #backToTop:hover {
