--- a/web/src/main/webapp/WEB-INF/templates/fragments/common_javascript.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/common_javascript.html
@@ -14,8 +14,17 @@
 <script th:src="@{/resources/app-assets/vendors/js/extensions/unslider-min.js}"></script>
 
 <script th:src="@{/resources/app-assets/vendors/js/tables/datatable/datatables.min.js}"></script>
+<script th:src="@{/resources/app-assets/vendors/js/tables/datatable/dataTables.responsive.min.js}"></script>
+<script th:src="@{/resources/app-assets/vendors/js/tables/buttons.colVis.min.js}"></script>
+<script th:src="@{/resources/app-assets/vendors/js/tables/datatable/dataTables.colReorder.min.js}"></script>
+<script th:src="@{/resources/app-assets/vendors/js/tables/datatable/dataTables.buttons.min.js}"></script>
+<script th:src="@{/resources/app-assets/vendors/js/tables/datatable/buttons.bootstrap4.min.js}"></script>
 <script th:src="@{/resources/app-assets/vendors/js/tables/datatable/dataTables.fixedHeader.min.js}"></script>
+
+
 <script th:src="@{/resources/app-assets/vendors/js/tables/datatable/dataTables.keyTable.min.js}"></script>
+
+
 
 <!-- <script th:src="@{/resources/app-assets/vendors/js/charts/echarts/echarts.js}"></script> -->
 <!-- END PAGE VENDOR JS-->
@@ -25,7 +34,8 @@
 <script th:src="@{/resources/app-assets/js/scripts/customizer.min.js}"></script>
 <!-- END ROBUST JS-->
 <!-- BEGIN PAGE LEVEL JS-->
-<script th:src="@{/resources/app-assets/js/scripts/tables/datatables-extensions/datatable-keytable.min.js}"></script>
+<script defer th:src="@{/resources/app-assets/js/scripts/tables/datatables-extensions/datatable-keytable.min.js}"></script>
+<script defer th:src="@{/resources/app-assets/js/scripts/tables/datatables-extensions/datatable-responsive.min.js}"></script>
 <!-- <script
 	th:src="@{/resources/app-assets/js/scripts/pages/dashboard-fitness.min.js}"></script> -->
 <!-- <script
