--- a/web/src/main/webapp/WEB-INF/templates/fragments/chat/frg_chatAssistant.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/chat/frg_chatAssistant.html
@@ -82,12 +82,12 @@
 					<div class="dataTables_scroll">
 						<div class="dataTables_scrollHead" style="overflow: hidden; position: relative; border: 0px; width: 100%;">
 							<div class="dataTables_scrollHeadInner" style="box-sizing: content-box; width: 1062.41px; padding-right: 17px;">
-								<table class="table table-striped table-bordered dataex-key-scrolling">
+								<table class="table table-striped table-bordered dataex-key-scrolling dataex-res-modal">
 									<thead>
 										<tr>
 											<th>Tên công ty</th>
 											<th>Người liên hệ</th>
-											<th>Nội dung trao đổi trước đó</th>
+											<th>Chi tiết tương tác</th>
 											<th>Độ ưu tiên</th>
 											<th>Tình trạng chăm sóc</th>
 											<th>Thực hiện chăm sóc</th>
@@ -95,68 +95,15 @@
 									</thead>
 									<tbody>
 										<tr>
-											<td>Tiger Nixon</td>
-											<td>System Architect</td>
-											<td>Edinburgh</td>
-											<td>61</td>
-											<td>2011/04/25</td>
-											<td>$320,800</td>
-										</tr>
-										<tr>
-											<td>Garrett Winters</td>
-											<td>Accountant</td>
-											<td>Tokyo</td>
-											<td>63</td>
-											<td>2011/07/25</td>
-											<td>$170,750</td>
-										</tr>
-										<tr>
-											<td>Ashton Cox</td>
-											<td>Junior Technical Author</td>
-											<td>San Francisco</td>
-											<td>66</td>
-											<td>2009/01/12</td>
-											<td>$86,000</td>
-										</tr>
-										<tr>
-											<td>Cedric Kelly</td>
-											<td>Senior Javascript Developer</td>
-											<td>Edinburgh</td>
-											<td>22</td>
-											<td>2012/03/29</td>
-											<td>$433,060</td>
-										</tr>
-										<tr>
-											<td>Airi Satou</td>
-											<td>Accountant</td>
-											<td>Tokyo</td>
-											<td>33</td>
-											<td>2008/11/28</td>
-											<td>$162,700</td>
-										</tr>
-										<tr>
-											<td>Brielle Williamson</td>
-											<td>Integration Specialist</td>
-											<td>New York</td>
-											<td>61</td>
-											<td>2012/12/02</td>
-											<td>$372,000</td>
-										</tr>
-										<tr>
-											<td>Herrod Chandler</td>
-											<td>Sales Assistant</td>
-											<td>San Francisco</td>
-											<td>59</td>
-											<td>2012/08/06</td>
-											<td>$137,500</td>
-										</tr>
-										<tr>
-											<td>Rhona Davidson</td>
-											<td>Integration Specialist</td>
-											<td>Tokyo</td>
-											<td>55</td>
-											<td>2010/10/14</td>
-											<td>$327,900</td>
+											<td style="text-decoration: underline; cursor: pointer;">Công ty TNHH ABC</td>
+											<td>Trần Anh Tuấn</td>
+											<td style="text-decoration: underline; cursor: pointer;">Danh sách tương tác</td>
+											<td>Quan trọng</td>
+											<td>Chưa chăm sóc</td> <!-- 1 cái thẻ -->
+											<td>
+												<button>Chăm sóc</button>
+												<button>Hẹn gặp mặt</button>
+											</td>
 										</tr>
 									</tbody>
 								</table>	
