--- a/web/src/main/webapp/WEB-INF/templates/fragments/hmenu.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/hmenu.html
@@ -81,26 +81,31 @@
             <!--  <li class="dropdown nav-item"><a class="dropdown-toggle nav-link" th:href="'https://myworkspace.vn/cas/login?service=http://localhost:8080/crm-web/j_spring_cas_security_check'" data-toggle="dropdown"><i class="icon-note"></i><span data-i18n="nav.templates.main">LOG IN</span></a> -->
         	 <li class="dropdown nav-item">
 			    <a class="dropdown-toggle nav-link" href="#" data-toggle="dropdown">
-			        <i class="icon-key"></i>
 			        <!-- Kiểm tra trạng thái đăng nhập -->
-			        <span 
-			            th:if="${#request.userPrincipal}" 
-			            style="color: green; font-weight: bold;" 
-			            data-i18n="nav.templates.main">Verified Account</span>
-			        <span 
-			            th:unless="${#request.userPrincipal}" 
-			            data-i18n="nav.templates.main">Account</span>
+			        <span th:if="${#request.userPrincipal}" style="color: green; font-weight: bold;" 
+			        	  data-i18n="nav.templates.main">
+			       		<!-- Verified Account -->
+			       		<i class="icon-user"></i> 
+			       		<span data-i18n="nav.dash.main">
+							Welcome, <span th:text="${#request.userPrincipal.name}">User
+						</span>
+					</span>
+				</span>
+			        
+			        <span th:unless="${#request.userPrincipal}" data-i18n="nav.templates.main">
+			        	<i class="icon-key"></i>Account
+			        </span>
 			    </a>
 			    <ul class="dropdown-menu">
 			        <!-- Kiểm tra nếu đã đăng nhập -->
-			        <li th:if="${#request.userPrincipal}" data-menu="">
+			       <!--  <li th:if="${#request.userPrincipal}" data-menu="">
 			            <a class="dropdown-item" href="#">
 			                <i class="icon-user"></i>
 			                <span data-i18n="nav.dash.main">
 			                    Welcome, <span th:text="${#request.userPrincipal.name}">User</span>
 			                </span>
 			            </a>
-			        </li>
+			        </li> -->
 			        <li th:if="${#request.userPrincipal}" data-menu="">
 			            <a class="dropdown-item" th:href="@{/logout-handler}">
 			                <i class="icon-logout"></i>Log out
