--- a/web/src/main/webapp/WEB-INF/templates/fragments/common_javascript.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/common_javascript.html
@@ -14,9 +14,6 @@
 <script th:src="@{/resources/app-assets/vendors/js/extensions/unslider-min.js}"></script>
 
 <script th:src="@{/resources/app-assets/vendors/js/tables/datatable/datatables.min.js}"></script>
-<script th:src="@{/resources/app-assets/vendors/js/tables/datatable/dataTables.responsive.min.js}"></script>
-<script th:src="@{/resources/app-assets/vendors/js/tables/buttons.colVis.min.js}"></script>
-<script th:src="@{/resources/app-assets/vendors/js/tables/datatable/dataTables.colReorder.min.js}"></script>
 <script th:src="@{/resources/app-assets/vendors/js/tables/datatable/dataTables.buttons.min.js}"></script>
 <script th:src="@{/resources/app-assets/vendors/js/tables/datatable/buttons.bootstrap4.min.js}"></script>
 <script th:src="@{/resources/app-assets/vendors/js/tables/datatable/dataTables.fixedHeader.min.js}"></script>
@@ -31,11 +28,12 @@
 <!-- BEGIN ROBUST JS-->
 <script th:src="@{/resources/app-assets/js/core/app-menu.min.js}"></script>
 <script th:src="@{/resources/app-assets/js/core/app.min.js}"></script>
-<script th:src="@{/resources/app-assets/js/scripts/customizer.min.js}"></script>
+
+<!-- <script th:src="@{/resources/app-assets/js/scripts/customizer.min.js}"></script> -->
+
 <!-- END ROBUST JS-->
 <!-- BEGIN PAGE LEVEL JS-->
 <script defer th:src="@{/resources/app-assets/js/scripts/tables/datatables-extensions/datatable-keytable.min.js}"></script>
-<script defer th:src="@{/resources/app-assets/js/scripts/tables/datatables-extensions/datatable-responsive.min.js}"></script>
 <!-- <script
 	th:src="@{/resources/app-assets/js/scripts/pages/dashboard-fitness.min.js}"></script> -->
 <!-- <script
