--- a/web/src/main/webapp/WEB-INF/templates/fragments/chat/frg_chatAssistant.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/chat/frg_chatAssistant.html
@@ -70,7 +70,7 @@
 	    <div class="modal-header">
 	        <span class="modal-title">DANH SÁCH KHÁCH HÀNG CẦN CHĂM SÓC</span>
 	        <div class="modal-buttons">
-	            <button id="minimize-btn-modal" class="modal-btn">Minimize</button>
+	            <!-- <button id="minimize-btn-modal" class="modal-btn">Minimize</button> -->
 	            <button id="close-btn-modal" class="modal-btn">Close</button>
 	        </div>
 	    </div>
@@ -101,8 +101,123 @@
 											<td>Quan trọng</td>
 											<td>Chưa chăm sóc</td> <!-- 1 cái thẻ -->
 											<td>
-												<button>Chăm sóc</button>
-												<button>Hẹn gặp mặt</button>
+												<button class="care-button">
+												    <span class="icon"></span>
+												    <span class="text">Chăm sóc</span>
+												</button>
+
+												<button class="meet-button">
+												    <span class="icon"></span>
+												    <span class="text">Hẹn gặp mặt</span>
+												</button>
+											</td>
+										</tr>
+										<tr>
+										    <td style="text-decoration: underline; cursor: pointer;">Công ty TNHH Thương Mại Đại Phát</td>
+										    <td>Nguyễn Văn Nam</td>
+										    <td style="text-decoration: underline; cursor: pointer;">Danh sách tương tác</td>
+										    <td>Tiềm năng</td>
+										    <td>Đã chăm sóc</td>
+										    <td>
+												<button class="care-button">
+												    <span class="icon"></span>
+												    <span class="text">Chăm sóc</span>
+												</button>
+
+												<button class="meet-button">
+												    <span class="icon"></span>
+												    <span class="text">Hẹn gặp mặt</span>
+												</button>
+											</td>
+										</tr>
+										<tr>
+										    <td style="text-decoration: underline; cursor: pointer;">Cửa hàng Thời Trang Lụa Việt</td>
+										    <td>Trần Thị Lan</td>
+										    <td style="text-decoration: underline; cursor: pointer;">Danh sách tương tác</td>
+										    <td>Bình thường</td>
+										    <td>Chưa chăm sóc</td>
+										    <td>
+												<button class="care-button">
+												    <span class="icon"></span>
+												    <span class="text">Chăm sóc</span>
+												</button>
+
+												<button class="meet-button">
+												    <span class="icon"></span>
+												    <span class="text">Hẹn gặp mặt</span>
+												</button>
+											</td>
+										</tr>
+										<tr>
+										    <td style="text-decoration: underline; cursor: pointer;">Doanh nghiệp Xuất Khẩu Hải Sản Biển Đông</td>
+										    <td>Phạm Văn Minh</td>
+										    <td style="text-decoration: underline; cursor: pointer;">Danh sách tương tác</td>
+										    <td>Quan trọng</td>
+										    <td>Đang chăm sóc</td>
+										   	<td>
+												<button class="care-button">
+												    <span class="icon"></span>
+												    <span class="text">Chăm sóc</span>
+												</button>
+
+												<button class="meet-button">
+												    <span class="icon"></span>
+												    <span class="text">Hẹn gặp mặt</span>
+												</button>
+											</td>
+										</tr>
+										<tr>
+										    <td style="text-decoration: underline; cursor: pointer;">Siêu thị Điện Máy Thành Công</td>
+										    <td>Hoàng Thị Hương</td>
+										    <td style="text-decoration: underline; cursor: pointer;">Danh sách tương tác</td>
+										    <td>Tiềm năng</td>
+										    <td>Chưa chăm sóc</td>
+										    <td>
+												<button class="care-button">
+												    <span class="icon"></span>
+												    <span class="text">Chăm sóc</span>
+												</button>
+
+												<button class="meet-button">
+												    <span class="icon"></span>
+												    <span class="text">Hẹn gặp mặt</span>
+												</button>
+											</td>
+										</tr>
+										<tr>
+										    <td style="text-decoration: underline; cursor: pointer;">Nhà sách Tri Thức Việt</td>
+										    <td>Nguyễn Hải Đăng</td>
+										    <td style="text-decoration: underline; cursor: pointer;">Danh sách tương tác</td>
+										    <td>Bình thường</td>
+										    <td>Đã chăm sóc</td>
+										    <td>
+												<button class="care-button">
+												    <span class="icon"></span>
+												    <span class="text">Chăm sóc</span>
+												</button>
+
+												<button class="meet-button">
+												    <span class="icon"></span>
+												    <span class="text">Hẹn gặp mặt</span>
+												</button>
+											</td>
+										</tr>
+										<tr>
+										    <td style="text-decoration: underline; cursor: pointer;">Công ty Cổ Phần Công Nghệ Mặt Trời</td>
+										    <td>Trần Quốc Bảo</td>
+										    <td style="text-decoration: underline; cursor: pointer;">Danh sách tương tác</td>
+										    <td>Quan trọng</td>
+										    <td>Chưa chăm sóc</td>
+										    <td>
+												<button class="care-button">
+												    <span class="icon"></span>
+												    <span class="text">Chăm sóc</span>
+												</button>
+
+												<button class="meet-button">
+												    <span class="icon"></span>
+												    <span class="text">Hẹn gặp mặt</span>
+												</button>
 											</td>
 										</tr>
 									</tbody>
@@ -244,6 +359,108 @@
 	    overflow: hidden;
 	    cursor: pointer;
 	}
+	.care-button {
+	    position: relative;
+	    display: flex;
+	    align-items: center;
+	    padding: 10px 20px;
+	    background-color: #52B788;
+	    border: none;
+	    border-radius: 50px;
+	    color: #fff;
+	    font-size: 16px;
+	    cursor: pointer;
+	    transition: background-color 0.5s ease, transform 0.2s ease, box-shadow 0.2s ease;
+	    box-shadow: 0 6px 6px rgba(0, 0, 0, 0.5);
+	}
+
+.care-button .icon {
+    position: absolute;
+    left: 0px;
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
+    background-image: url('https://media.istockphoto.com/id/1330766185/vi/vec-to/bi%E1%BB%83u-t%C6%B0%E1%BB%A3ng-gi%E1%BB%AF-ch%C3%A2n-kh%C3%A1ch-h%C3%A0ng-d%E1%BB%8Bch-v%E1%BB%A5-ch%C4%83m-s%C3%B3c-kh%C3%A1ch-h%C3%A0ng-ng%C6%B0%E1%BB%9Di-c%C3%B3-bi%E1%BB%83u-t%C6%B0%E1%BB%A3ng-b%C3%A0n-tay.jpg?s=612x612&w=0&k=20&c=EEqUglMlEMECZ_S8ZT-KwR6e2fxXOWbSBlouATc6ra0=');
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    transition: transform 0.5s ease, background-color 0.5s ease;
+    border: solid 3px #3db85e;
+}
+
+.care-button .text{
+    margin-left: 50px;
+    transition: transform 0.5s ease, color 0.5s ease;
+}
+
+.care-button:hover {
+    background-color: #40916c;
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3); /* Tăng bóng đổ khi hover */
+    transform: translateY(-3px); /* Nhẹ nhàng nhô lên khi hover */
+}
+
+.care-button:hover .icon {
+    transform: translateX(120px); /* Trượt icon từ trái sang phải khi hover */
+}
+
+.care-button:hover .text {
+    color: 'white';
+    transform: translateX(-60px);
+    font-weight: 600;
+}
+
+.meet-button {
+	margin-top: 10px;
+	position: relative;
+    display: inline-flex;
+    white-space: nowrap;
+    align-items: center;
+    padding: 10px 20px;
+    background-color: #4F81BD;
+    border: none;
+    border-radius: 50px;
+    color: #fff;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.5s ease, transform 0.2s ease, box-shadow 0.2s ease;
+    box-shadow: 0 6px 6px rgba(0, 0, 0, 0.5);
+}
+.meet-button .icon {
+    position: absolute;
+    left: 0px;
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
+    background-image: url('https://media.istockphoto.com/id/940783490/vector/calendar-and-clock-icon.jpg?s=612x612&w=0&k=20&c=6Qkj9UwZRyj8cD5eYxUMzdAJnz1VuxSF3aC_JAa8-qk=');
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    transition: transform 0.5s ease, background-color 0.5s ease;
+    border: solid 3px #3d56b8;
+    background-color: 'white';
+}
+
+.meet-button .text {
+    margin-left: 50px;
+    transition: transform 0.5s ease, color 0.5s ease;
+}
+
+.meet-button:hover {
+    background-color: #3A6BA3;
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3); /* Tăng bóng đổ khi hover */
+    transform: translateY(-3px); /* Nhẹ nhàng nhô lên khi hover */
+}
+
+.meet-button:hover .icon {
+    transform: translateX(150px); /* Trượt icon từ trái sang phải khi hover */
+}
+
+.meet-button:hover .text {
+    color: 'white';
+    transform: translateX(-60px);
+    font-weight: 600;
+}
+	
 	</style>
 	
 	<!-- Chat Assistant JavaScript -->
