--- a/web/src/main/webapp/WEB-INF/templates/fragments/common_javascript.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/common_javascript.html
@@ -13,13 +13,13 @@
 <script th:src="@{/resources/app-assets/vendors/js/charts/morris.min.js}"></script> -->
 <script th:src="@{/resources/app-assets/vendors/js/extensions/unslider-min.js}"></script>
 
-<script th:src="@{/resources/app-assets/vendors/js/tables/datatable/datatables.min.js}"></script>
-<script th:src="@{/resources/app-assets/vendors/js/tables/datatable/dataTables.buttons.min.js}"></script>
-<script th:src="@{/resources/app-assets/vendors/js/tables/datatable/buttons.bootstrap4.min.js}"></script>
-<script th:src="@{/resources/app-assets/vendors/js/tables/datatable/dataTables.fixedHeader.min.js}"></script>
+<!-- <script th:src="@{/resources/app-assets/vendors/js/tables/datatable/datatables.min.js}"></script> -->
+<!-- <script th:src="@{/resources/app-assets/vendors/js/tables/datatable/dataTables.buttons.min.js}"></script> -->
+<!-- <script th:src="@{/resources/app-assets/vendors/js/tables/datatable/buttons.bootstrap4.min.js}"></script> -->
+<!-- <script th:src="@{/resources/app-assets/vendors/js/tables/datatable/dataTables.fixedHeader.min.js}"></script> -->
 
 
-<script th:src="@{/resources/app-assets/vendors/js/tables/datatable/dataTables.keyTable.min.js}"></script>
+<!-- <script th:src="@{/resources/app-assets/vendors/js/tables/datatable/dataTables.keyTable.min.js}"></script> -->
 
 
 
@@ -33,7 +33,7 @@
 
 <!-- END ROBUST JS-->
 <!-- BEGIN PAGE LEVEL JS-->
-<script defer th:src="@{/resources/app-assets/js/scripts/tables/datatables-extensions/datatable-keytable.min.js}"></script>
+<!-- <script defer th:src="@{/resources/app-assets/js/scripts/tables/datatables-extensions/datatable-keytable.min.js}"></script> -->
 <!-- <script
 	th:src="@{/resources/app-assets/js/scripts/pages/dashboard-fitness.min.js}"></script> -->
 <!-- <script
