--- a/web/src/main/webapp/WEB-INF/templates/fragments/common_css.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/common_css.html
@@ -26,12 +26,12 @@
 	<link rel="stylesheet" type="text/css" th:href="@{/resources/app-assets/vendors/css/extensions/unslider.css}">
 	<link rel="stylesheet" type="text/css" th:href="@{/resources/app-assets/vendors/css/weather-icons/climacons.min.css}">
 	
-	<link rel="stylesheet" type="text/css" th:href="@{/resources/app-assets/vendors/css/tables/datatable/datatables.min.css}">
-	<link rel="stylesheet" type="text/css" th:href="@{/resources/app-assets/vendors/css/tables/extensions/buttons.dataTables.min.css}"> 
-	<link rel="stylesheet" type="text/css" th:href="@{/resources/app-assets/vendors/css/tables/extensions/fixedHeader.dataTables.min.css}">
+<!-- 	<link rel="stylesheet" type="text/css" th:href="@{/resources/app-assets/vendors/css/tables/datatable/datatables.min.css}"> -->
+<!-- 	<link rel="stylesheet" type="text/css" th:href="@{/resources/app-assets/vendors/css/tables/extensions/buttons.dataTables.min.css}">  -->
+<!-- 	<link rel="stylesheet" type="text/css" th:href="@{/resources/app-assets/vendors/css/tables/extensions/fixedHeader.dataTables.min.css}"> -->
 
-	<link rel="stylesheet" type="text/css" th:href="@{/resources/app-assets/vendors/css/tables/datatable/select.dataTables.min.css}">
-	<link rel="stylesheet" type="text/css" th:href="@{/resources/app-assets/vendors/css/tables/extensions/keyTable.dataTables.min.css}"> 
+<!-- 	<link rel="stylesheet" type="text/css" th:href="@{/resources/app-assets/vendors/css/tables/datatable/select.dataTables.min.css}"> -->
+<!-- 	<link rel="stylesheet" type="text/css" th:href="@{/resources/app-assets/vendors/css/tables/extensions/keyTable.dataTables.min.css}">  -->
 	
 	
 	<!-- END VENDOR CSS -->
