--- a/web/src/main/webapp/WEB-INF/templates/intro.html
+++ b/web/src/main/webapp/WEB-INF/templates/intro.html
@@ -5,6 +5,9 @@
     <title>MKS CRM</title>
     <link rel="stylesheet" href="resources/css/buttonBackToTop.css">
     
+    <link rel="stylesheet" type="text/css" href="/library/webjars/datatables/1.10.25/css/dataTables.bootstrap4.min.css">
+    <link rel="stylesheet" type="text/css" href="/library/webjars/datatables/1.10.25/css/jquery.dataTables.min.css">
+    
     <th:block th:include="fragments/common_meta_title"></th:block>
     <th:block th:include="fragments/head"></th:block>
     <th:block th:include="fragments/common_css"></th:block>
@@ -140,8 +143,19 @@
 	<!-- Footer Section -->
     <th:block th:include="fragments/home/footerForIntro"></th:block>
 </body>
+
+
 <th:block th:include="fragments/common_javascript"></th:block>
 
+<script th:inline="javascript" src="/library/webjars/datatables/1.10.25/js/jquery.dataTables.min.js"></script>
+<script th:inline="javascript" src="/library/webjars/datatables.net/buttons/1.7.1/js/dataTables.buttons.min.js"></script>
+<script th:inline="javascript" src="/library/webjars/datatables.net/js/libs/jszip/3.1.3/jszip.min.js"></script>
+<script th:inline="javascript" src="/library/webjars/datatables.net/js/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
+<script th:inline="javascript" src="/library/webjars/datatables.net/js/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
+<script th:inline="javascript" src="/library/webjars/datatables.net/buttons/1.7.1/js/buttons.html5.min.js"></script>
+<script th:inline="javascript" src="/library/webjars/datatables.net/buttons/1.7.1/js/buttons.print.min.js"></script>
+
+<!-- <script type="text/javascript" th:src="@{/resources/js/chat/datatable.js}" ></script> -->
 <script src="resources/js/task/BackToTop.js"></script>
 
 </html>
