--- a/web/src/main/webapp/WEB-INF/templates/fragments/chat/frg_chatAssistant.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/chat/frg_chatAssistant.html
@@ -66,7 +66,10 @@
 	        <span class="modal-title">DANH SÁCH KHÁCH HÀNG CẦN CHĂM SÓC</span>
 	        <div class="modal-buttons">
 	            <!-- <button id="minimize-btn-modal" class="modal-btn">Minimize</button> -->
-	            <button id="close-btn-modal" class="modal-btn">Close</button>
+	            <button id="reloadCustomerCare" class="modal-btn btn btn-warning" style="color: black !important">
+					<i class="fa fa-sync"></i> Tải lại danh sách
+				</button>
+				<button id="close-btn-modal" class="modal-btn">Đóng</button>
 	        </div>
 	    </div>
 	    
