--- a/web/src/main/webapp/resources/css/chatAssistant.css
+++ b/web/src/main/webapp/resources/css/chatAssistant.css
@@ -290,7 +290,7 @@ input[type="radio"]:checked+label.badge-primary {
 }
 
 .badge-default {
-    background-color: #e0e0e0;
+   	background-color: #aaaaaa;
     color: black;
     padding: 5px 10px;
     border-radius: 5px;
@@ -303,11 +303,39 @@ input[type="radio"]:checked+label.badge-primary {
 }
 
 .badge-warning {
-    background-color: #ffc107;
     color: black;
+    background-color: #ff8000 !important;
 }
 
 .badge-primary {
     background-color: #007bff;
     color: white;
+}
+
+.btn-group-customer-care {
+    display: flex;
+    gap: 8px;
+}
+
+.btn-group-customer-care button {
+    background-color: #007bff;
+    color: white;
+    border: none;
+    padding: 6px 12px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    font-size: 14px;
+}
+
+.btn-group-customer-care button:hover {
+    background-color: #0056b3;
+}
+
+.btn-group-customer-care button:nth-child(2) {
+    background-color: #dc3545;
+}
+
+.btn-group-customer-care button:nth-child(2):hover {
+    background-color: #b02a37;
 }
